--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "eslint-plugin-vue": "^6.2.2",
     "sass": "^1.32.5",
     "sass-loader": "^10.1.1",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "gh-pages": "^3.1.0"
   },
   "eslintConfig": {
     "root": true,
